--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,9 +42,9 @@
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
       {% if post.status == 'Under review' %}
-        <p>Under review</p>
+        <p>Under review in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
       {% else %}
-        <p>Published</p>
+        <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
       {% endif %}
     {% elsif post.date %}
       <p class="page__date">
