--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,23 +41,19 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
-      {% if post.status %}
-        {% if post.status == 'Under review' %}
-          <p>Under review</p>
-        {% else %}
-          <p>Published</p>
-        {% endif %}
+      {% if post.status == 'Under review' %}
+        <p>Under review in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
+      {% else %}
+        <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
       {% endif %}
     {% elsif post.date %}
       <p class="page__date">
         <strong>
           <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
-          {% if post.status %}
-            {% if post.status == 'Under review' %}
-              Under review:
-            {% else %}
-              Published:
-            {% endif %}
+          {% if post.status == 'Under review' %}
+            Under review:
+          {% else %}
+            Published:
           {% endif %}
         </strong> 
         <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">
