--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,19 +41,23 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
-      {% if post.status == 'Under review' %}
-        <p>Under review in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
-      {% else %}
-        <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
+      {% if post.status %}
+        {% if post.status == 'Under review' %}
+          <p>Under review {% if post.venue %}in <i>{{ post.venue }}</i>{% endif %}</p>
+        {% else %}
+          <p>Published {% if post.venue %}in <i>{{ post.venue }}</i>{% endif %}</p>
+        {% endif %}
       {% endif %}
     {% elsif post.date %}
       <p class="page__date">
         <strong>
           <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
-          {% if post.status == 'Under review' %}
-            Under review:
-          {% else %}
-            Published:
+          {% if post.status %}
+            {% if post.status == 'Under review' %}
+              Under review:
+            {% else %}
+              Published:
+            {% endif %}
           {% endif %}
         </strong> 
         <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">
